# miniature-lighting-desk

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_server.py
.github/workflows/: mkdocs.yml
changelog/: index.html
crossbar/: crossbar-wamp.service  run_crossbar.sh
crossbar/.crossbar/: config.json
docs/: index.md  installation.md  overview.md
docs/extending/: hardware.md  software.md
docs/implementation/: docs.md  firmware.md  hardware.md
docs/scripting/: more.md  quick.md
docs/uses/: concept.md  uses.md  using.md
extending/hardware/: index.html
extending/software/: index.html
implementation/docs/: index.html
implementation/firmware/: index.html
implementation/hardware/: index.html
installation/: index.html
license/: index.html
miniature_lighting_desk/: __init__.py  async_hal.py  cli.py  local.py  local_gui.py  server.py  test_server.py
overview/: index.html
scripting/more/: index.html
scripting/quick/: index.html
search/: search_index.json
tests/: test_server.py
uses/concept/: index.html
uses/uses/: index.html
uses/using/: index.html
