[tool.poetry]
name = "miniature-lighting-desk"
version = "0.1.0"
description = "Desk software for Miniature Lighting Controller"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
